--- a/notebooks/custom_prometheus_queries.ipynb
+++ b/notebooks/custom_prometheus_queries.ipynb
@@ -23,6 +23,7 @@
    ],
    "source": [
     "import os\n",
+    "\n",
     "from datetime import datetime, timedelta\n",
     "from pathlib import Path\n",
     "from dateutil import rrule\n",
@@ -218,6 +219,38 @@
    "source": [
     "import time\n",
     "print(time.ctime())\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import string"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# str_l = \"\"\n",
+    "# for i in range(1024 * 1024):\n",
+    "#     str_l+=random.choice(string.ascii_letters)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
