--- a/notebooks/dataset_manipulator/manipulator.ipynb
+++ b/notebooks/dataset_manipulator/manipulator.ipynb
@@ -420,6 +420,63 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['second', 'vehicleCount']"
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mdf.columns.to_list()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "second\n",
+      "vehicleCount\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in mdf.columns:\n",
+    "    print(column)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
