--- a/notebooks/dataset_manipulator/manipulator.ipynb
+++ b/notebooks/dataset_manipulator/manipulator.ipynb
@@ -55,6 +55,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "now = pd.to_datetime(\"now\")\n",
+    "now"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "outputs": [
     {
