--- a/notebooks/block_rnn/lstm_evaluation.ipynb
+++ b/notebooks/block_rnn/lstm_evaluation.ipynb
@@ -252,97 +252,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(val.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.04881647507251402\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.04695580783446993\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.0607504698016418\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.06118042829608697\n",
-      "Component: cpu_rate has std value more than threshold:0.07std: 0.10523930073027929\n",
-      "Component: memory_rate has std value more than threshold:0.07std: 0.09526965158445776\n",
-      "Component: read_bytes_rate has std value more than threshold:0.07std: 0.1289994164447564\n",
-      "Component: write_bytes_rate has std value more than threshold:0.07std: 0.13026280633613616\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.05939222508791735\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.05807539090883014\n",
-      "Component: read_bytes_rate has std value more than threshold:0.07std: 0.07220149535037834\n",
-      "Component: write_bytes_rate has std value more than threshold:0.07std: 0.07303544261695388\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.0523776524535224\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.04808906628418548\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.06030243021244572\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.060290409385296125\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.053776761655970826\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.052041947596713996\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.06438361816949405\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.06478088621012293\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.04697242435853806\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.046020791269256976\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.05549130020609878\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.05563451227199095\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.04932579597717326\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.0464864039981808\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.05734974898162436\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.05781389389197938\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.04031719651838421\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.04260079713629018\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.050151159141894074\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.050812321413317416\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.04704170063709627\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.04635407881472279\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.05645836991721782\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.05651931093211819\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.05549194934499487\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.054657229801916965\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.06461145896599448\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.06505424476574503\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.05911014317921231\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.056318057544365085\n",
-      "Component: read_bytes_rate has std value more than threshold:0.07std: 0.07667825691059683\n",
-      "Component: write_bytes_rate has std value more than threshold:0.07std: 0.07715308626811748\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.052934785791578724\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.05069603114036671\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.06071165426367986\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.060488349714666136\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.030900060764410694\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.03240264423664289\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.034811121923951895\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.034863159236558965\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.03263858118616077\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.03474233117015626\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.03762414948718328\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.03773449830912835\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.03327939117206241\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.035283671486611205\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.038548972921120715\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.03866783155101115\n",
-      "Component: cpu_rate has std value less than threshold:0.07std: 0.028636875990723638\n",
-      "Component: memory_rate has std value less than threshold:0.07std: 0.030151792505082698\n",
-      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.03316320997843812\n",
-      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.03328654850384875\n"
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.06784916527269044\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.06512757138235717\n",
+      "Component: read_bytes_rate has std value more than threshold:0.07std: 0.0849213606458468\n",
+      "Component: write_bytes_rate has std value more than threshold:0.07std: 0.08551373196530977\n",
+      "Component: cpu_rate has std value more than threshold:0.07std: 0.10501259394641839\n",
+      "Component: memory_rate has std value more than threshold:0.07std: 0.09497582823081845\n",
+      "Component: read_bytes_rate has std value more than threshold:0.07std: 0.12430004729142514\n",
+      "Component: write_bytes_rate has std value more than threshold:0.07std: 0.12522224124132478\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.061823802328676056\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.06045578409106077\n",
+      "Component: read_bytes_rate has std value more than threshold:0.07std: 0.07508170378462342\n",
+      "Component: write_bytes_rate has std value more than threshold:0.07std: 0.07593776817748114\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.052181182835512964\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.04738428305165636\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.061798106725685975\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.061732329822898224\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.0553249100612807\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.050589769617949004\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.06401792100248638\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.06385149270982278\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.05674634855710915\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.05560993033921586\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.06922408009803402\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.06970649967101022\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.06054594339640176\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.05499048109699561\n",
+      "Component: read_bytes_rate has std value more than threshold:0.07std: 0.07114018002906082\n",
+      "Component: write_bytes_rate has std value more than threshold:0.07std: 0.07077836564468558\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.041207181687995545\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.042910808298874226\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.05044614282821279\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.05105990950777795\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.05554457880974191\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.05447470822650138\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.06639409025330621\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.06655952901133937\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.045006606278189996\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.042366207835947564\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.05211601436545202\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.05249807198941434\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.05702730124939417\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.05523352388394147\n",
+      "Component: read_bytes_rate has std value more than threshold:0.07std: 0.07238343335795844\n",
+      "Component: write_bytes_rate has std value more than threshold:0.07std: 0.07288886439466827\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.041908743012709235\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.039998647632549574\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.04750513487894001\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.047406635304722965\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.038847900395733735\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.04104576150141444\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.04556867687972037\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.0457884118868045\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.028628225296718365\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.030538860982885753\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.03387421116015171\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.03404355269459463\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.03870612581110919\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.03720600378102867\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.04466421457258994\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.0447600743934808\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.03603984838362525\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.03850336974838824\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.04178272827393061\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.041941248229818304\n",
+      "Component: cpu_rate has std value less than threshold:0.07std: 0.020570201182741592\n",
+      "Component: memory_rate has std value less than threshold:0.07std: 0.02457704660883283\n",
+      "Component: read_bytes_rate has std value less than threshold:0.07std: 0.020844993123099474\n",
+      "Component: write_bytes_rate has std value less than threshold:0.07std: 0.021264297521890466\n"
      ]
     }
    ],
@@ -358,7 +342,11 @@
     "num_cols_fetched = len_cols\n",
     "num_cols_predicted = 0\n",
     "fetched_pred_num = num_cols_fetched + num_cols_predicted\n",
-    "while(last_fetch_len+pred_len < len_val):\n",
+    "stop = False\n",
+    "while(not stop):\n",
+    "    if last_fetch_len+pred_len >= len_val:\n",
+    "        stop = True\n",
+    "        pred_len = len_val - last_fetch_len\n",
     "    pred = model.predict(series=series_to_predict, n=pred_len, num_samples=100)\n",
     "    cols_to_fetch = get_cols_to_fetch (pred, 0.07)\n",
     "    single_prediction =  model.predict(series=series_to_predict, n=pred_len)\n",
@@ -376,31 +364,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "last_fetch_len"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "0.7777777777777778"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_cols_fetched"
+    "num_cols_predicted/(num_cols_fetched+num_cols_predicted)"
    ]
   },
   {
