--- a/test.ipynb
+++ b/test.ipynb
@@ -44,6 +44,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "nums = [2,2,1,5,5]\n",
+    "xor = 0\n",
+    "for num in nums:\n",
+    "    xor ^= num\n",
+    "xor"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "outputs": [],
    "source": [
